--- a/dice.html
+++ b/dice.html
@@ -26,7 +26,7 @@
                 </ul>
             </div>
             <div id="article">
-                <h2>About Dice 2</h2>
+                <h2>About Dice</h2>
                 <p>
                     주사위는 놀이 도구의 하나로서, 일정 숫자에서 무작위로 선택된 어떤 결과를
                     얻고자 할 때 사용되는 장난감이다. 정다면체의 각각의 면에 임의의 숫자나 눈 등등
@@ -36,7 +36,7 @@
                 </p>
             </div>
             <div style="margin-left: 42vw;">
-                <button class="dicy" onclick = "randice(this);">R0LL!</button>
+                <button class="rollbox" onclick = "randice(this);">R0LL!</button>
                 <img src="D20.png" width="30%">
             </div>
         </div>
